<resources>
    <string name="app_name">My Foraging Assistant</string>

<!-- Main Activity -->
    <!-- Title -->
    <string name="forage_main">Forage Form</string>

    <!-- Edit Text Forms -->
    <string name="name_hint_edit_text">Food or Resource Name</string>
    <string name="address_hint_edit_text">Type</string>
    <string name="home_hint_edit_text">Yield in Weight</string>

    <!-- Text View -->
    <string name="default_text_date">01/01/1990</string>
    <string name="text_view_sort_by">Sort List By: </string>

    <!-- Buttons -->
    <string name="button_harvest_date">Harvest Date</string>
    <string name="button_location">Record Location</string>
    <string name="button_save">Save</string>
    <string name="button_list_view">VIEW LIST</string>

    <string name="content_description_forage_photo">Take Photo of Find</string>

<!-- Date Dialog -->
    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_select">Select</string>
    <string name="title_dialog">Select Date</string>

<!-- List Activity -->
    <!-- Title -->
    <string name="forage_list">Forage List</string>

    <!-- Text Views -->
    <string name="text_view_display_name">name</string>
    <string name="text_view_display_type">type</string>
    <string name="text_view_display_yield">yield</string>
    <string name="text_view_display_date">date</string>

    <!-- Buttons -->
    <string name="button_main_view">New Forage</string>
    <string name="button_delete">Delete</string>

    <!-- Switches -->
    <string name="switch_delete">Delete</string>

<!-- Map Activity -->
    <!-- Title -->
    <string name="forage_map">Forage Map</string>

    <string name="text_view_map_forage_name">forage name</string>

<!-- Main and List Activity -->
    <!-- Text Views -->
    <string name="text_view_name">Name: </string>
    <string name="text_view_type">Type: </string>
    <string name="text_view_yield">Yield: </string>
    <string name="text_view_date">Harvest Date: </string>

    <!-- Settings -->
    <string name="my_forage_list_preferences">MyForageListPreferences</string>
    <string name="sort_field">sortfield</string>
    <string name="settings_name">foragename</string>
    <string name="settings_type">foragetype</string>
    <string name="sort_order">sortorder</string>
    <string name="radio_button_sort_by_name">sort by name</string>
    <string name="radio_button_sort_by_type">sort by type</string>

</resources>