<?xml version="1.0" encoding="utf-8"?>

<!--
    Document   : List Item
    Created on : 11.17.22
    @author incomingWill
    CPS 435 Final Program
-->

<!--
    Display each individual list item, which activity_list
    will use in a recycler view
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_name"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewListType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_type"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewListName" />

    <TextView
        android:id="@+id/textViewListYield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_yield"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewListType" />

    <TextView
        android:id="@+id/textViewListDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_date"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewListYield" />

    <TextView
        android:id="@+id/textViewListDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_display_name"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toEndOf="@+id/textViewListName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewListDisplayType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_display_type"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toEndOf="@+id/textViewListType"
        app:layout_constraintTop_toBottomOf="@+id/textViewListDisplayName" />

    <TextView
        android:id="@+id/textViewListDisplayYield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_display_yield"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toEndOf="@+id/textViewListYield"
        app:layout_constraintTop_toBottomOf="@+id/textViewListDisplayType" />

    <TextView
        android:id="@+id/textViewListDisplayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_display_date"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewListDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewListDisplayYield" />

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noimage" />

    <Button
        android:id="@+id/buttonDeleteForage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPhoto"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>